--- a/experiments.html
+++ b/experiments.html
@@ -20,7 +20,15 @@
 	</div>
 	<div class="grid-layout">
 		<div class="col-1-2-3 clearfix">
-			<div class="col-1-2">
+			<div class="col-1-2 experiment">
+				<h1>Tooltips</h1>
+				<p>
+					Normally, both your asses would be dead as <a href="#" class="tooltip"><span>tooltip content here</span>fucking fried chicken</a>, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, <a href="#" class="tooltip"><span>lots of tooltip content here</span>I've</a> already been through <a href="#" class="tooltip"><span>Not entirely understanding this</span>too much shit</a> this morning over this case to hand it over to your dumb ass.
+				</p>
+				<hr>
+				<button class="tooltip"><span>heyooooo Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</span>Tooltip</button>
+			</div>
+			<div class="col-1-2 experiment">
 				<h1>Alerts</h1>
 				<div class="alert">
 					<button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -59,17 +67,36 @@
 					<strong>Error</strong> Small lorem ipsum dolor sit amet
 				</div>
 			</div>
+			<div class="col-1-2 experiment">
+				<h1>Buttons</h1>
+				<button class="button">Default</button>
+				<a class="button button-secondary">Secondary</a>
+			</div>
 		</div>
 	</div>
-	<footer class="primary-footer clearfix">
-		<div class="studios-logo">
-			<a href="http://www.6fstudios.com"><span class="six-f">6F</span>studios</a>
+	<footer class="primary-footer">
+		<div class="grid-layout">
+			<div class="col-1-2-3 clearfix">
+				<div class="studios-logo">
+					<a href="http://www.6fstudios.com"><span class="six-f">6F</span>studios</a>
+				</div>
+				<ul class="nav-links pull-right">
+					<li><a href="">home</a></li>
+					<li><a href="">about</a></li>
+					<li><a href="">experiments</a></li>
+				</ul>
+			</div>
 		</div>
-		<ul class="nav-links pull-right">
-			<li><a href="">home</a></li>
-			<li><a href="">about</a></li>
-			<li><a href="">experiments</a></li>
-		</ul>
 	</footer>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-11843667-11', 'github.io');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
