--- a/index.html
+++ b/index.html
@@ -32,28 +32,35 @@
 				<p><span class="date">April 7, 2013</span> <span class="tag">Experiments</span><img src="http://www.dummyimage.com/290x300" /></p>
 			</div>
 			<div class="col-2">
-				<h2>Something</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h2>Column 2</h2>
+				<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
+				<a href="http://www.slipsum.com">- Samuel L. Ipsum</a>
 			</div>
 			<div class="col-3">
-				<h2>Col 3</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h2>Column 3</h2>
+				<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+				<a href="http://www.slipsum.com">- Samuel L. Ipsum</a>
 			</div>
-		</div>
-		<div class="col-1-2-3 clearfix">
-			<button class="button">DEFAULT</button>
-			<a class="button button-secondary">SECONDARY</a>
 		</div>
 	</div>
 	<footer class="primary-footer clearfix">
-		<div class="studios-logo">
-			<a href="http://www.6fstudios.com"><span class="six-f">6F</span>studios</a>
+		<div class="col-1-2-3">
+			<ul class="nav-links pull-right">
+				<li><a href="">home</a></li>
+				<li><a href="">about</a></li>
+				<li><a href="">experiments</a></li>
+			</ul>
 		</div>
-		<ul class="nav-links pull-right">
-			<li><a href="">home</a></li>
-			<li><a href="">about</a></li>
-			<li><a href="">experiments</a></li>
-		</ul>
 	</footer>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-11843667-11', 'github.io');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
