--- a/about.html
+++ b/about.html
@@ -7,17 +7,14 @@
 <body>
 	<nav class="primary-nav clearfix">
 		<div class="nav-wrapper clearfix">
-			<h1 class="title-headline">tim white</h1>
+			<h1 class="title-headline"><a href="index.html">tim white</a></h1>
 			<ul class="nav-links pull-right">
 				<li><a href="index.html">home</a></li>
-				<li><a href="about.html">about</a></li>
+				<li><a class="active" href="about.html">about</a></li>
 				<li><a href="experiments.html">experiments</a></li>
 			</ul>
 		</div>
 	</nav>
-	<div class="home-intro">
-		
-	</div>
 	<div class="grid-layout">
 		<div class="col-1-2-3 clearfix">
 			<div class="col-1">
