--- a/experiments.html
+++ b/experiments.html
@@ -7,26 +7,24 @@
 <body>
 	<nav class="primary-nav clearfix">
 		<div class="nav-wrapper clearfix">
-			<h1 class="title-headline">tim white</h1>
+			<h1 class="title-headline"><a href="index.html">tim white</a></h1>
 			<ul class="nav-links pull-right">
 				<li><a href="index.html">home</a></li>
 				<li><a href="about.html">about</a></li>
-				<li><a href="experiments.html">experiments</a></li>
+				<li><a class="active" href="experiments.html">experiments</a></li>
 			</ul>
 		</div>
 	</nav>
-	<div class="home-intro">
-		
-	</div>
 	<div class="grid-layout">
 		<div class="col-1-2-3 clearfix">
 			<div class="col-1-2 experiment">
 				<h1>Tooltips</h1>
-				<p>
-					Normally, both your asses would be dead as <a href="#" class="tooltip"><span>tooltip content here</span>fucking fried chicken</a>, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, <a href="#" class="tooltip"><span>lots of tooltip content here</span>I've</a> already been through <a href="#" class="tooltip"><span>Not entirely understanding this</span>too much shit</a> this morning over this case to hand it over to your dumb ass.
+				<p>This is a live demo of the tooltip pattern. Hover over <a href="#" class="tooltip"><span>tooltip content here</span>this link</a>, and a helpful bubble will appear above the link.</p>
+				<p>It even works on other elements, like buttons:
+					<button class="tooltip"><span>this is a tooltip over a button</span>Tooltip</button>
 				</p>
-				<hr>
-				<button class="tooltip"><span>heyooooo Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</span>Tooltip</button>
+				<p>I kept running into problems with applying long tooltip text to a small element (e.g. a short word), where the tooltip would wrap awkwardly. Adding <code>white-space: nowrap</code> to the <code>.tooltip span</code> solved this problem, and now tooltip text can be as long as I want without wrapping.
+				</p> 
 			</div>
 			<div class="col-1-2 experiment">
 				<h1>Alerts</h1>
