--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 			<h1 class="title-headline">tim white</h1>
 			<ul class="nav-links pull-right">
 				<li><a href="index.html">home</a></li>
-				<li><a href="about.html">about</a></li>
+				<li><a class="active" href="about.html">about</a></li>
 				<li><a href="experiments.html">experiments</a></li>
 			</ul>
 		</div>
