--- a/experiments.html
+++ b/experiments.html
@@ -11,7 +11,7 @@
 			<ul class="nav-links pull-right">
 				<li><a href="index.html">home</a></li>
 				<li><a href="about.html">about</a></li>
-				<li><a href="experiments.html">experiments</a></li>
+				<li><a class="active" href="experiments.html">experiments</a></li>
 			</ul>
 		</div>
 	</nav>
