--- a/about.html
+++ b/about.html
@@ -1,23 +1,22 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Merriweather:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav class="primary-nav clearfix">
 		<div class="nav-wrapper clearfix">
-			<h1 class="title-headline">tim white</h1>
+			<h1 class="title-headline"><a href="index.html">tim white</a></h1>
 			<ul class="nav-links pull-right">
 				<li><a href="index.html">home</a></li>
 				<li><a class="active" href="about.html">about</a></li>
 				<li><a href="experiments.html">experiments</a></li>
+				<li><a href="journal.html">journal</a></li>
 			</ul>
 		</div>
 	</nav>
-	<div class="home-intro">
-		
-	</div>
+
 	<div class="grid-layout">
 		<div class="col-1-2-3 clearfix">
 			<div class="col-1">
@@ -53,14 +52,7 @@
 		</div>
 	</div>
 	<footer class="primary-footer clearfix">
-		<div class="studios-logo">
-			<a href="http://www.6fstudios.com"><span class="six-f">6F</span>studios</a>
-		</div>
-		<ul class="nav-links pull-right">
-			<li><a href="">home</a></li>
-			<li><a href="">about</a></li>
-			<li><a href="">experiments</a></li>
-		</ul>
+		&copy; 1988-2013 tim white
 	</footer>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
