--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Merriweather:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -12,6 +12,7 @@
 				<li><a href="index.html">home</a></li>
 				<li><a class="active" href="about.html">about</a></li>
 				<li><a href="experiments.html">experiments</a></li>
+				<li><a href="journal.html">journal</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -50,14 +51,7 @@
 		</div>
 	</div>
 	<footer class="primary-footer clearfix">
-		<div class="studios-logo">
-			<a href="http://www.6fstudios.com"><span class="six-f">6F</span>studios</a>
-		</div>
-		<ul class="nav-links pull-right">
-			<li><a href="">home</a></li>
-			<li><a href="">about</a></li>
-			<li><a href="">experiments</a></li>
-		</ul>
+		&copy; 1988-2013 tim white
 	</footer>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
