about copy update

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 				<h1>about</h1>
 			</div>
 			<div class="col-2-3">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac congue neque. Ut ultrices est quis magna auctor non blandit massa lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ut nibh justo.</p>
+				<p>Nothing is more rewarding to me than making something useful. Whether that's a website, a playlist, or a campfire, getting things done is what it's all about.</p>
 			</div>
 		</div>
 		<div class="col-1-2-3 clearfix">
