fixed css problems

--- a/about.html
+++ b/about.html
@@ -30,7 +30,12 @@
 				<h1>experience</h1>
 			</div>
 			<div class="col-2-3">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac congue neque. Ut ultrices est quis magna auctor non blandit massa lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ut nibh justo.</p>
+				<h2>Interaction Designer</h2>
+				<p>I design interfaces for cars.com, specifically, the part of the site that helps you sell your car. I learned a lot about Agile development (Scrum) and the process involved with building a product from scratch and releasing it successfully.</p>
+				<h2>Proprietor</h2>
+				<p>My own little side projects and freelance work. I started diving into freelance design/development work towards the end of college, and have since started 6fstudios, the working name of my web media consultancy.</p>
+				<h2>User Experience Specialist</h2>
+				<p>Jack of all (UX) trades at Hagerty Collector Insurance. The UX department consisted of two whole people, so there were many hats being worn, as the lexicon goes.</p>
 			</div>
 		</div>
 		<div class="col-1-2-3 clearfix">
@@ -38,7 +43,8 @@
 				<h1>education</h1>
 			</div>
 			<div class="col-2-3">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac congue neque. Ut ultrices est quis magna auctor non blandit massa lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ut nibh justo.</p>
+				<h2>The University of Michigan</h2>
+				<p>Graduated in 2010 with a BA in Social Computing Informatics.</p>
 			</div>
 		</div>
 		<div class="col-1-2-3 clearfix">
@@ -46,7 +52,13 @@
 				<h1>skills</h1>
 			</div>
 			<div class="col-2-3">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac congue neque. Ut ultrices est quis magna auctor non blandit massa lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ut nibh justo.</p>
+				<span class="skill" data-width="50px">HTML</span>
+				<span class="skill" data-width="75px">CSS</span>
+				<span class="skill">jQuery</span>
+				<span class="skill">Visual Design</span>
+				<span class="skill">UX Architecture</span>
+				<span class="skill">Web analytics</span>
+				<span class="skill">Usability testing</span>
 			</div>
 		</div>
 	</div>
