--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 		</div>
 	</nav>
 	<div class="home-intro">
-		<div class="grid-layout clearfix">
-			<div class="profile-photo col-1"></div>
-			<div class="col-2-3">
-				<h1>Maker of Things</h1>
-				<p>Nothing is more rewarding to me than making something useful. Whether that's a <a href="">website</a>, a <a href="">playlist</a>, or a <a href="">campfire</a>, getting things done is what it's all about.</p>
-				<a class="read-more" href="about.html">Things I've done</a>
+		<div class="grid-layout">
+			<div class="col-1-2-3 clearfix">
+				<div class="profile-photo col-1"></div>
+				<div class="col-2-3">
+					<h1>Maker of Things</h1>
+					<p>Nothing is more rewarding to me than making something useful. Whether that's a <a href="">website</a>, a <a href="">playlist</a>, or a <a href="">campfire</a>, getting things done is what it's all about.</p>
+					<a class="read-more" href="about.html">Things I've done</a>
+				</div>
 			</div>
 		</div>
 	</div>
