--- a/about.html
+++ b/about.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="stylesheet" href="stylesheets/icon-style.css">
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Merriweather:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Merriweather:400,700' rel='stylesheet' type='text/css'>
+	<title>Tim White | About</title>
 </head>
 <body>
 	<nav class="primary-nav clearfix">
@@ -43,8 +45,8 @@
 				<h1>education</h1>
 			</div>
 			<div class="col-2-3">
-				<h2>The University of Michigan</h2>
-				<p>Graduated in 2010 with a BA in Social Computing Informatics.</p>
+				<h2>University of Michigan</h2>
+				<p>Class of 2010 / BA, Social Computing Informatics</p>
 			</div>
 		</div>
 		<div class="col-1-2-3 clearfix">
@@ -52,13 +54,16 @@
 				<h1>skills</h1>
 			</div>
 			<div class="col-2-3">
-				<span class="skill" data-width="50px">HTML</span>
-				<span class="skill" data-width="75px">CSS</span>
-				<span class="skill">jQuery</span>
-				<span class="skill">Visual Design</span>
-				<span class="skill">UX Architecture</span>
-				<span class="skill">Web analytics</span>
-				<span class="skill">Usability testing</span>
+				<span class="skill" style="width: 90%">Usability testing</span>
+				<div>
+					UX Design
+					<span class="skill" style="width: 50%">Visual Design</span>
+					<span class="skill" style="width: 90%">Interaction Design</span>
+				</div>
+				<span class="skill" style="width: 85%">HTML</span>
+				<span class="skill" style="width: 85%">CSS</span>
+				<span class="skill" style="width: 70%">Web analytics</span>
+				<span class="skill" style="width: 50%">jQuery</span>
 			</div>
 		</div>
 	</div>
@@ -66,14 +71,14 @@
 		&copy; 1988-2013 tim white
 	</footer>
 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-11843667-11', 'github.io');
-  ga('send', 'pageview');
+	  ga('create', 'UA-11843667-11', 'github.io');
+	  ga('send', 'pageview');
 
-</script>
+	</script>
 </body>
 </html>
