--- a/journal.html
+++ b/journal.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<link rel="stylesheet" href="stylesheets/icon-style.css">
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Merriweather:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Merriweather:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<title>Tim White | Journal</title>
 </head>
 <body>
 	<nav class="primary-nav clearfix">
@@ -19,8 +20,8 @@
 	</nav>
 	<div class="grid-layout">
 		<div class="col-1-2-3 clearfix">
+			<h1>Journal</h1>
 			<div class="col-1-2">
-				<h1>Journal</h1>
 				<article>
 					<h2>What I've Learned so Far...</h2>
 					<date>4/22/13</date>
