--- a/experiments.html
+++ b/experiments.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<link rel="stylesheet" href="stylesheets/icon-style.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Merriweather:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<title>Tim White | Experiments</title>
 </head>
 <body>
 	<nav class="primary-nav clearfix">
@@ -18,8 +20,9 @@
 	</nav>
 	<div class="grid-layout">
 		<div class="col-1-2-3 clearfix">
+			<h1>Experiments</h1>
 			<div class="col-1-2 experiment">
-				<h1>Tooltips</h1>
+				<h2>Tooltips</h2>
 				<p>This is a live demo of the tooltip pattern. Hover over <a href="#" class="tooltip"><span>tooltip content here</span>this link</a>, and a helpful bubble will appear above the link.</p>
 				<p>It even works on other elements, like buttons:
 					<button class="tooltip"><span>this is a tooltip over a button</span>Tooltip</button>
@@ -28,7 +31,7 @@
 				</p> 
 			</div>
 			<div class="col-1-2 experiment">
-				<h1>Alerts</h1>
+				<h2>Alerts</h2>
 				<div class="alert">
 					<button type="button" class="close" data-dismiss="alert">&times;</button>
 					<h4>Default Lorem</h4>
@@ -67,16 +70,14 @@
 				</div>
 			</div>
 			<div class="col-1-2 experiment">
-				<h1>Buttons</h1>
+				<h2>Buttons</h2>
 				<button class="button">Default</button>
 				<a class="button button-secondary">Secondary</a>
 			</div>
 		</div>
 	</div>
 	<footer class="primary-footer">
-		<div class="col-1-2-3 clearfix">
-			&copy; 1988-2013 tim white
-		</div>
+		&copy; 1988-2013 tim white
 	</footer>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
