--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-
 <!doctype html>
 <html>
 <head>
+	<link rel="stylesheet" href="stylesheets/icon-style.css">
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Merriweather:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Merriweather:400,700' rel='stylesheet' type='text/css'>
+	<title>Tim White | Home</title>
 </head>
 <body>
 	<nav class="primary-nav clearfix">
@@ -20,7 +21,7 @@
 	<div class="home-intro">
 		<div class="grid-layout">
 			<div class="col-1-2-3 clearfix">
-				<div class="profile-photo col-1"></div>
+				<div class="col-1"><img src="tim.JPG"></div>
 				<div class="col-2-3">
 					<h1>Maker of Things</h1>
 					<p>Nothing is more rewarding to me than making something useful. Whether that's a <a href="">website</a>, a <a href="">playlist</a>, or a <a href="">campfire</a>, getting things done is what it's all about.</p>
@@ -54,13 +55,7 @@
 		</div>
 	</div>
 	<footer class="primary-footer clearfix">
-		<div class="col-1-2-3">
-			<ul class="nav-links pull-right">
-				<li><a href="">home</a></li>
-				<li><a href="">about</a></li>
-				<li><a href="">experiments</a></li>
-			</ul>
-		</div>
+		&copy; 1988-2013 tim white
 	</footer>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
